# SMLP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ActivationFunctions_8h.html  ActivationFunctions_8h_source.html  CHANGELOG.md  CMakeLists.txt  Common_8h.html  Common_8h_source.html  DataFileParser_8cpp.html  DataFileParser_8h.html  DataFileParser_8h_source.html  Dockerfile  FileParserException_8h_source.html  HiddenLayer_8h.html  HiddenLayer_8h_source.html  InputLayer_8h.html  InputLayer_8h_source.html  Layer_8h.html  Layer_8h_source.html  Main_8cpp.html  NetworkImportExportJSON_8h.html  NetworkImportExportJSON_8h_source.html  Network_8h.html  Network_8h_source.html  Neuron_8h.html  Neuron_8h_source.html  OutputLayer_8h.html  OutputLayer_8h_source.html  Predict_8cpp.html  Predict_8h.html  Predict_8h_source.html  README.md  SimpleConfigException_8h.html  SimpleConfig_8h.html  SimpleConfig_8h_source.html  SimpleLang_8h.html  SimpleLang_8h_source.html  SimpleLogger_8h.html  SimpleLogger_8h_source.html  (+93 more)
api/: ActivationFunctions_8h.html  ActivationFunctions_8h_source.html  CommonErrors_8h.html  CommonErrors_8h_source.html  CommonMessages_8h.html  CommonMessages_8h_source.html  CommonModes_8h.html  CommonModes_8h_source.html  CommonParameters_8h.html  CommonParameters_8h_source.html  CommonResult_8h.html  CommonResult_8h_source.html  Common_8h.html  Common_8h_source.html  DataFileParser_8cpp.html  DataFileParser_8h.html  DataFileParser_8h_source.html  DataParserException_8h.html  DataParserException_8h_source.html  DataParser_8cpp.html  DataParser_8h.html  DataParser_8h_source.html  EmptyCellException_8h.html  EmptyCellException_8h_source.html  FileParserException_8h.html  FileParserException_8h_source.html  HiddenLayer_8h.html  HiddenLayer_8h_source.html  ImportExportException_8h.html  ImportExportException_8h_source.html  InputLayer_8h.html  InputLayer_8h_source.html  Layer_8h.html  Layer_8h_source.html  Main_8cpp.html  ManagerException_8h.html  ManagerException_8h_source.html  Manager_8cpp.html  Manager_8h.html  Manager_8h_source.html  (+369 more)
coverage/: coverage.json  lcov.info
doc/: Doxyfile
html/: index-sort-f.html  index-sort-l.html  index.html
libs/csv-parser/: CMakeLists.txt
libs/csv-parser/include/: csv_cell.h  csv_parser.h
libs/json/: CMakeLists.txt
libs/json/include/: json.hpp
libs/libsmlp/: CMakeLists.txt
libs/libsmlp/include/: ActivationFunction.h  ActivationFunctions.h  ActivationType.h  AdamOptimizer.h  Common.h  CommonErrors.h  CommonMessages.h  CommonModes.h  CommonParameters.h  CommonResult.h  Connection.h  DataFileParser.h  DataParser.h  FileParser.h  HiddenLayer.h  ImportExportJSON.h  InputLayer.h  InputOutputPair.h  Layer.h  Manager.h  Monitor.h  Network.h  NetworkImportExport.h  NetworkImportExportCSV.h  NetworkImportExportFacade.h  NetworkImportExportJSON.h  Neuron.h  Optimizer.h  OutputLayer.h  Predict.h  PredictFile.h  PredictSocket.h  PredictStdin.h  RunnerFileVisitor.h  RunnerSocketVisitor.h  RunnerStdinVisitor.h  RunnerVisitor.h  RunnerVisitorFactory.h  SimpleConfig.h  SimpleHTTPServer.h  (+15 more)
libs/libsmlp/include/exception/: DataParserException.h  EmptyCellException.h  FileParserException.h  ImportExportException.h  ImportExportJSONException.h  ManagerException.h  NetworkException.h  PredictException.h  SimpleConfigException.h  SimpleLangException.h  SimpleLanguageException.h  SimpleSocketException.h  SimpleTCPException.h  SmlpException.h  TestingException.h  TestingFileException.h  TrainingException.h  TrainingFileException.h
libs/libsmlp/src/: ActivationFunction.cpp  AdamOptimizer.cpp  Connection.cpp  DataFileParser.cpp  DataParser.cpp  FileParser.cpp  HiddenLayer.cpp  InputLayer.cpp  InputOutputPair.cpp  Layer.cpp  Manager.cpp  Monitor.cpp  Network.cpp  NetworkImportExport.cpp  NetworkImportExportCSV.cpp  NetworkImportExportFacade.cpp  NetworkImportExportJSON.cpp  Optimizer.cpp  OutputLayer.cpp  Predic.cpp  Predict.cpp  PredictFile.cpp  PredictSocket.cpp  PredictStdin.cpp  RunnerFileVisitor.cpp  RunnerSocketVisitor.cpp  RunnerStdinVisitor.cpp  SimpleHTTPServer.cpp  SimpleSocketTCP.cpp  SimpleTCPClient.cpp  SimpleTCPServer.cpp  Testing.cpp  TestingFile.cpp  TestingResult.cpp  TestingStdin.cpp  Training.cpp  TrainingFile.cpp  TrainingSocket.cpp  TrainingStdin.cpp
libs/libsmlp/test/: CMakeLists.txt  TestFileParser.cpp  TestImportExportJSON.cpp  TestNetwork.cpp  TestTraining.cpp  test_file.csv
scripts/: cccc.sh  doxygen.sh  httpTests.sh  lizard.sh  valgrind.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+92 more)
test/: CMakeLists.txt  TestCommon.cpp  TestDataFileParser.cpp  TestFileParser.cpp  TestImportExportJSON.cpp  TestLogger.cpp  TestNetwork.cpp  TestNetworkImportExportJSON.cpp  TestPredic.cpp  TestSimpleConf.cpp  TestSimpleLang.cpp  TestTraining.cpp  format.sh  formater.awk  httpTests.sh  mushroom_data.csv  training_data.txt
test/ctests/: CMakeLists.txt  smlp.conf
test/data/: testModel.csv  testModel.json  test_config_bad_format.json  test_config_full.json  test_config_lang.json  test_file_bad_format.csv  test_file_bad_line.csv  test_file_empty_line.csv  test_file_input_only.csv  test_file_short_line.csv
test/doctests/: CMakeLists.txt  SimpleHTTPServerMock.cpp  SimpleTCPClient.cpp  SimpleTCPServerMock.cpp  TestCommon.cpp  TestDataFileParser.cpp  TestManager.cpp  TestNetwork.cpp  TestNetworkImportExportJSON.cpp  TestPredic.cpp  TestSimpleConf.cpp  TestSimpleHTTPServer.cpp  TestSimpleLang.cpp  TestSimpleLogger.cpp  TestSimpleTCPServer.cpp  TestTesting.cpp  TestTraining.cpp
test/doctests/include/: Event.h  EventMediator.h  SimpleHTTPServerMock.h  SimpleTCPClient.h  SimpleTCPClientMock.h  SimpleTCPServerMock.h
test/mushroom/: format.sh  mushroom_data_meta.txt  mushroom_formater.awk
test/unit_tests/: CMakeLists.txt  TestDataFileParser.cpp  TestLogger.cpp  TestNetwork.cpp  TestPredic.cpp  TestSimpleLang.cpp  TestTraining.cpp
(+454 files in other folders)
